# flow-rag

./: .env.example  .gitignore  README.md  package.json  skills-lock.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  dependencies.py  main.py
apps/api/app/agent/: __init__.py
apps/api/app/agent/flows/: __init__.py  ingestion_flow.py  rag_flow.py
apps/api/app/agent/nodes/: __init__.py  answer.py  intent.py  planner.py  rerank.py  retrieve.py  rewrite.py  verify.py
apps/api/app/agent/tools/: __init__.py  base.py  citation_builder.py  document_lookup.py  keyword_search.py  llm.py  metadata_filter.py  reranker.py  vector_search.py
apps/api/app/api/: routes_chat.py  routes_datasets.py  routes_documents.py  routes_health.py  routes_jobs.py  schemas.py
apps/api/app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  security.py
apps/api/app/db/: __init__.py  models.py  repositories.py
apps/api/app/services/: __init__.py  chat_service.py  citation_service.py  dataset_service.py  document_service.py  embedding_service.py  ingestion_service.py  llm_service.py  rerank_service.py  retrieval_service.py
apps/api/app/workers/: __init__.py  tasks.py  worker_app.py
apps/api/tests/: test_api_smoke.py  test_rag_flow.py
apps/web/: .prettierignore  components.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx
docs/: api.md  architecture.md  dev-cloud-services.md  eval.md  skills.md
infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml
(+31 files in other folders)
